styles/play_quizz.css
.play-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

.cover {
    width: 100%;
    height: 227px;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    margin-bottom: 42px;
}

.cover img {
    width: 100%;
}

.cover p {
    position: absolute;
    color: #fff;
    font-size: 39px;
    font-weight: 400;
}

.shadow {
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    background: linear-gradient(0deg, rgba(0, 0, 0, 0.57), rgba(0, 0, 0, 0.57));
}

.question-section {
    width: 759px;
    max-height: 679px;
    background: #fff;
    margin-bottom: 42px;
    padding: 36px;
}

.question {
    width: 100%;
    height: 138px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 20px;
}

.question p {
    color: #fff;
    font-size: 20px;
    line-height: 23px;
    font-weight: 700;

}

.answer-section {
    display: flex;
    column-gap: 20px;
    row-gap: 20px;
    flex-wrap: wrap;
}

.answer {
  width: calc(50% - 10px);
  cursor: pointer;
}


.answer p{
  font-size: 20px;
  line-height: 23px;
  font-weight: bold;
  margin: 10px 0px;
}


.img-wrapper{
  position: relative;
  width: 100%;
  padding-bottom: 53%;
}

.img-wrapper img{
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* daqui pra baixo feito por vitor */

.choice.revealed {
    opacity: 0.3;
    cursor: auto;
}

.choice.picked {
    opacity: 1;
}

.choice.right-choice.revealed p {
    color: #009C22;
}

.choice.wrong-choice.revealed p {
    color: #FF0B0B;
}

